<resources>
    <string name="app_name">Projeto Animes</string>
    <string name="adicionar_anime">Adicionar Anime</string>
    <string name="hint_nome">Nome&#8230;</string>
    <string name="hint_episodio">Episódio&#8230;</string>
    <string name="hint_temporada">Temporada&#8230;</string>
    <string name="hint_notas">Notas&#8230;</string>
    <string name="hint_url_da_imagem">URL da imagem&#8230;</string>
    <string name="confirmar">CONFIRMAR</string>
    <string name="search">Digite o nome&#8230;.</string>
    <string name="menu_deletar">Deletar</string>
    <string name="menu_editar">Editar</string>
    <string name="menu_buscar">Buscar</string>
    <string name="menu_reordenar">Reordenar</string>
    <string name="menu_configuraces">Configurações</string>
    <string name="menu_sobre">Sobre</string>
    <string name="hint_link">Link para o anime&#8230;</string>
    <string name="descri_imagem_ampli">Imagem do anime ampliada</string>
    <string name="nome">Nome</string>
    <string name="episodio">Episódio</string>
    <string name="temporada">Temporada</string>
    <string name="notas">Notas</string>
    <string name="src_imagem">Src da Imagem</string>
    <string name="link_anime">Link do Anime</string>
    <string name="titulo_anime">Titulo Anime</string>
    <string name="episodio_dois_pontos">Episódio:</string>
    <string name="menos_um">-1</string>
    <string name="mais_um">+1</string>
    <string name="imagem_do_anime">Imagem do anime</string>
    <string name="enviar">Enviar</string>
    <string name="email">Email&#8230;</string>
    <string name="senha">Senha&#8230;</string>
    <string name="logar">LOGAR</string>
    <string name="cadastro">Não possui cadastro?</string>
    <string name="logo_do_aplicativo">Logo do aplicativo</string>
    <string name="tela_cadastro">Tela de Cadastro</string>
    <string name="repeta_sua_senha">Repita sua senha&#8230;</string>
    <string name="cadastrar">CADASTRAR</string>
    <string name="title_activity_config">ConfigActivity</string>
    <string name="config">Configurações</string>
    <string name="deslogar">DESLOGAR</string>
    <string name="order">Ordenar</string>
    <string name="recuperar_senha">RECUPERAR SENHA</string>
    <string name="d">D</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="q">Q</string>
    <string name="anime_em_lan_amento">Anime em lançamento</string>
    <string name="dias_de_lan_amento">Dias de lançamento</string>
    <string name="prioridade">Prioridade:</string>
</resources>
