<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_collapseMode="parallax"
        app:title="@string/adicionar_anime" />

    <ScrollView
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_nome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_nome"
                    android:inputType="textCapWords" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_ep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_input"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_ep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_episodio"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_ep"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_temp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_temporada"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_notas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_temp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_notas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_notas"
                    android:inputType="textAutoCorrect|textAutoComplete|textCapSentences" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_notas"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_url_da_imagem"
                    android:inputType="textUri" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_url"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_link"
                    android:inputType="textUri" />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/check_lance"
                android:layout_below="@id/txt_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/anime_em_lan_amento"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txt_view_dias"
                android:layout_below="@id/check_lance"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Dias de lançamento:"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                style="@style/Base.TextAppearance.AppCompat.Subhead"
                android:visibility="gone"/>


            <LinearLayout
                android:id="@+id/dias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_below="@id/txt_view_dias"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:visibility="gone">

                <ToggleButton
                    android:id="@+id/sunday_toggle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/circle_toggle_button"
                    android:textOn="@string/d"
                    android:textOff="@string/d"
                    android:textSize="22sp"
                    android:textColor="@android:color/white"
                    android:text="New ToggleButton" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <ToggleButton
                    android:id="@+id/monday_toggle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/circle_toggle_button"
                    android:textOn="@string/s"
                    android:textOff="@string/s"
                    android:textSize="22sp"
                    android:textColor="@android:color/white"
                    android:text="New ToggleButton" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>


                <ToggleButton
                    android:id="@+id/tuesday_toggle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/circle_toggle_button"
                    android:textOn="@string/t"
                    android:textOff="@string/t"
                    android:textSize="22sp"
                    android:textColor="@android:color/white"
                    android:text="New ToggleButton" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <ToggleButton
                    android:id="@+id/wednesday_toggle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/circle_toggle_button"
                    android:textOn="@string/q"
                    android:textOff="@string/q"
                    android:textSize="22sp"
                    android:textColor="@android:color/white"
                    android:text="New ToggleButton" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>


                <ToggleButton
                    android:id="@+id/thursday_toggle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/circle_toggle_button"
                    android:textOn="@string/q"
                    android:textOff="@string/q"
                    android:textSize="22sp"
                    android:textColor="@android:color/white"
                    android:text="New ToggleButton" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <ToggleButton
                    android:id="@+id/friday_toggle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/circle_toggle_button"
                    android:textOn="@string/s"
                    android:textOff="@string/s"
                    android:textSize="22sp"
                    android:textColor="@android:color/white"
                    android:text="New ToggleButton" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <ToggleButton
                    android:id="@+id/saturday_toggle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/circle_toggle_button"
                    android:textOn="@string/s"
                    android:textOff="@string/s"
                    android:textSize="22sp"
                    android:textColor="@android:color/white"
                    android:text="New ToggleButton" />
            </LinearLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_confirmar"
                style="@style/RaisedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/dias"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:text="@string/confirmar" />



        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
